--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -1,3 +1,11 @@
+.friendsListContainer {
+  margin-top: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .friendsList {
   display: flex;
+  gap: 60px;
 }
