--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -9,7 +9,7 @@
 .friendsItem {
   border: 2px solid black;
   border-radius: 8px;
-  padding: 20px;
+  padding: 20px 26px;
   display: flex;
   flex-direction: column;
   align-items: center;
